# Bank

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: BankAccount.cpp  BankAccount.h  BankClient.cpp  BankClient.h  Menu.cpp  Menu.h  main.cpp
app/src/controller/: inputcontroller.cpp  inputcontroller.h
app/src/informator/: IInformator.h  InformType.h
app/src/informator/bank_informator/: bankinformator.cpp  bankinformator.h
